generate custom wrapper configure file during installation